[package]
name = "rust-esp-miscompile-test"
version = "0.1.0"
authors = ["Ben Hansen <git@benhansen.io>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib"]

[profile.release]
# Comment out opt-level to prevent mis-compile
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["native"] }


[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
